trunk/Archive2/97/5907df23216a48/output
main.cpp:14:27: error: too many arguments to function call, expected 1, have 2
        operator<<(*this, 2.5); // ADL is not performed => fails
        ~~~~~~~~~~        ^~~
main.cpp:7:9: note: 'operator<<' declared here
        void operator<<(int) { std::cout << __PRETTY_FUNCTION__ << "\n"; }
        ^
1 error generated.
